--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=1.12.0",
     "deepagents>=0.3.7",
     "fastapi>=0.128.0",
+    "httpx>=0.28.1",
     "ipykernel>=7.1.0",
     "langchain>=1.2.6",
     "langchain-groq>=1.1.1",
